# ai-model-habitat-municipalidad

./: .gitignore  MODEL_README.md  Makefile  Modelfile  README.md  build_model.sh  config.yaml  dataset.json  output.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
prompts/: ft_input_prompt.md
src/: data_extractor.py  data_processor.py  main.py  ocr_tesseract.py  summarizer.py  type_def.py
src/utils/: config.py  index.py  threads_time_handler.py
