[project]
name = "pdf-data-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "black>=23.0.0",
    "easyocr>=1.7.0",
    "flake8>=6.0.0",
    "numpy>=1.24.0",
    "ollama>=0.5.1",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "pymupdf>=1.20.0",
    "pytesseract>=0.3.10",
    "pytest>=7.4.0",
    "qwen-vl-utils[decord]==0.0.8",
    "reportlab>=4.4.3",
    "torch>=2.0.0",
    "transformers>=4.51.1,<4.53.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }
